--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "*",
     "git-wrapper": "*",
     "moment": "*",
-    "consolidate": "git://github.com/simov/consolidate.js.git",
+    "consolidate": "0.8",
     "mustache": "*",
     "xtend" : "*"
   },
